키보드 애니메이션 추가, 정답 애니메이션 추가
키보드에 마우스를 올리면 커서가 변하며, 색상이 약간 진해지게 구현

정답이 맞을때와 틀릴때 애니메이션 각각 구현

--- a/css/footer.css
+++ b/css/footer.css
@@ -19,6 +19,12 @@ footer {
   font-weight: bold;
 }
 
+.keyboard-column:hover {
+  cursor: pointer;
+  transition: 0.3s;
+  background-color: rgb(165, 165, 165);
+}
+
 .keyboard-big-column {
   display: flex;
   flex-direction: column;
@@ -33,6 +39,12 @@ footer {
   padding: 10px 13px 10px 13px;
   font-size: 13px;
   font-weight: bold;
+}
+
+.keyboard-big-column:hover {
+  cursor: pointer;
+  transition: 0.3s;
+  background-color: rgb(165, 165, 165);
 }
 
 .keyboard-big-column img {
